# OGUxKorndoc

./: .env.example  .gitignore  CLAUDE.md  GRAVITY_UI_DOCS.md  LICENSE  LOOP_PROMPT.md  PRODUCT_AUDIT_20260523.md  README.md  TASKS.md  docker-compose.yml  examples.html  main.py  pyproject.toml  watch_agent.py
.claude/: settings.json  settings.local.json
.claude/hooks/: git_guard.sh  post_edit.sh
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_chat_sessions_and_messages.py  0002_add_notifications.py  0002_faq_items.py  0002_restore_lookup_revision_marker.py  0003_faq_items.py  0004_add_chat_sessions_and_messages.py
backend/api/: .dockerignore  Dockerfile  celery_client.py  dependencies.py  entrypoint.sh  main.py  pyproject.toml
backend/api/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
backend/api/routers/: admin.py  auth.py  chat.py  documents.py  faq.py  notifications.py  organizations.py  profile.py  search.py  users.py
backend/scripts/: create_admin.py
backend/shared/: __init__.py  config.py  database.py  llm.py  minio_client.py  models.py  security.py
backend/worker/: Dockerfile  celery_app.py  pyproject.toml
backend/worker/tasks/: index_faq.py  process_document.py
docs/adr/: 0001-ai-agent-architecture.md  0002-search-quality-v1.md
docs/specs/: my-13.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  update_tasks.py
frontend/src/: App.tsx  brand.css  index.css  main.tsx
frontend/src/api/: admin.ts  auth.ts  chat.ts  client.ts  documents.ts  faq.ts  organizations.ts  profile.ts  search.ts  users.ts
frontend/src/components/: BackgroundTaskMonitor.tsx  DocumentGrid.tsx  DocumentPreviewModal.tsx  DocumentShareModal.tsx  DocumentTable.tsx  ErrorBoundary.tsx  Layout.css  Layout.tsx  LookupSelects.tsx  NotificationBell.tsx  (+5 more)
nginx/: nginx.conf
prompts/: LOOP_PROMPT.md
prompts/architect/: ARCHITECT_PROMPT.md
prompts/frontend/: FRONTEND_LOOP_PROMPT.md  run_frontend.sh
(+24 files in other folders)
