[project]
name = "docsearch"
version = "0.1.0"
description = "Corporate document repository with semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in default args is the standard pattern

[tool.uv.workspace]
members = ["backend/api", "backend/worker"]
